# ai-news-agg

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  render.yaml  test_docling_scraper.py  test_docling_simple.py  test_youtube_scraper.py
app/: __init__.py
app/agent/: __init__.py  summarizer.py
app/config/: __init__.py  database.py  settings.py
app/models/: __init__.py  article.py  base.py  digest.py  source.py
app/schemas/: __init__.py  youtube.py
app/scrapers/: __init__.py  base.py  rss_scraper.py  web_scraper.py  youtube_scraper.py
app/services/: __init__.py  database.py  digest.py  email.py  scraping.py
app/templates/: digest_email.html
config/: sources.yaml
